name:                gathering
version:             0.1.0.0
synopsis:            Self hosted website for announcing group events
description:         Please see README.md
homepage:            https://gitlab.com/gilmi/gathering#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          gilmi@protonmail.com
copyright:           2017 Gil Mizrahi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Gathering
                       Web.Gathering.Database
                       Web.Gathering.HashPassword
                       Web.Gathering.Model
                       Web.Gathering.Types
                       Web.Gathering.Utils
                       Web.Gathering.Config
                       Web.Gathering.Run
                       Web.Gathering.Router
                       Web.Gathering.Auth
                       Web.Gathering.Actions
                       Web.Gathering.Forms.Sign
                       Web.Gathering.Html

  --other-modules:       Web.Gathering
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     -- framework
                     , Spock >= 0.11
                     -- html
                     , lucid
                     , Spock-lucid
                     -- background tasks like sending mails to users
                     , Spock-worker
                     -- tls support
                     , warp
                     , warp-tls
                     -- auth routing
                     , hvect
                     -- password hashing
                     , pwstore-purehaskell
                     -- Forms handling
                     , digestive-functors
                     , digestive-functors-lucid
                     , Spock-digestive
                     -- database integration
                     , hasql
                     -- input validation
                     , html-email-validate
                     --
                     , http-types
                     -- resource handling
                     , resourcet
                     -- logging stuff
                     , monad-logger
                     -- handling configurations
                     , configurator
                     -- json
                     , aeson
                     -- time handling
                     , time
                     -- render event as markdown
                     , cheapskate
                     , cheapskate-lucid
                     -- utils
                     , containers
                     , bytestring
                     , text
                     , directory
                     , process
                     , optparse-applicative
                     , transformers
                     , mtl
                     , contravariant

  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , ViewPatterns
                     , ScopedTypeVariables
                     , RecordWildCards
                     , NamedFieldPuns
                     , TupleSections
                     , DeriveFunctor
                     , DeriveGeneric
                     , EmptyDataDecls

executable gather
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , gathering

